include/libweston/backend-headless.h
@@ -41,6 +41,9 @@ struct weston_headless_backend_config {
 
 	/** Whether to use the pixman renderer, default is no-op */
 	bool use_pixman;
+
+	/** Whether to use the GL renderer, conflicts with use_pixman */
+	bool use_gl;
 };
 
 #ifdef  __cplusplus
